// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedPost [snapshot] should render the "Default" component correctly 1`] = `
<div
  class="p-5 bg-white rounded group"
>
  <div
    class="flex items-center"
  >
    <anonymous-stub
      url="https://picsum.photos/50"
      username="TheBaronless"
    />
    <div
      class="flex flex-col pl-3"
    >
      <span>
        TheBaronless
      </span>
      <span
        class="text-neutral"
      >
        less than a minute ago
      </span>
    </div>
    <anonymous-stub
      class="ml-auto opacity-0 transition-opacity text-neutral group-hover:opacity-100"
      path="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
    />
  </div>
  <p
    class="mt-5"
  >
    Salut à tous, j'ai découvert un groupe complètement ouf, dites-moi ce que vous en pensez !
  </p>
  <!--v-if-->
  <div
    class="flex justify-end mt-5"
  >
    <anonymous-stub
      counter="10"
      liked="false"
      showcounter="true"
    />
    <anonymous-stub
      class="ml-5"
      counter="15"
      showcounter="true"
    />
  </div>
</div>
`;

exports[`FeedPost [snapshot] should render the "WithTrack" component correctly 1`] = `
<div
  class="p-5 bg-white rounded group"
>
  <div
    class="flex items-center"
  >
    <anonymous-stub
      url="https://picsum.photos/50"
      username="TheBaronless"
    />
    <div
      class="flex flex-col pl-3"
    >
      <span>
        TheBaronless
      </span>
      <span
        class="text-neutral"
      >
        less than a minute ago
      </span>
    </div>
    <anonymous-stub
      class="ml-auto opacity-0 transition-opacity text-neutral group-hover:opacity-100"
      path="M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z"
    />
  </div>
  <p
    class="mt-5"
  >
    Salut à tous, j'ai découvert un groupe complètement ouf, dites-moi ce que vous en pensez !
  </p>
  <div
    class="mt-2"
  >
    
    <div
      class="bg-white-dark rounded p-2 flex"
    >
      <img
        alt="The track cover"
        class="rounded w-16 h-16"
        src="https://picsum.photos/50?1"
      />
      <div
        class="flex flex-col ml-2 leading-tight justify-center"
      >
        <span
          class="font-bold"
        >
          G.O.A.T.
        </span>
        
        <span>
          Polyphia
        </span>
        
      </div>
      <div
        class="flex self-center ml-auto"
      >
        <anonymous-stub
          class="text-black-light"
          counter="0"
          liked="false"
          showcounter="false"
        />
        <span
          class="ml-3"
        >
          2:30
        </span>
      </div>
    </div>
    
  </div>
  <div
    class="flex justify-end mt-5"
  >
    <anonymous-stub
      counter="10"
      liked="false"
      showcounter="true"
    />
    <anonymous-stub
      class="ml-5"
      counter="15"
      showcounter="true"
    />
  </div>
</div>
`;
